# confab_test

./: .gitignore  README.md  config.yaml  pyproject.toml
confab_test/: __init__.py  __main__.py  cli.py  config.py  db.py  ollama_client.py  report.py  runner.py
confab_test/tests/: __init__.py  base.py  test_citation_fabrication.py  test_correction_persistence.py  test_link_verification.py  test_number_fabrication.py  test_self_knowledge.py  test_temporal_consistency.py  test_tool_fabrication.py
confab_test/verifiers/: __init__.py  capability_checker.py  citation_verifier.py  output_comparator.py  url_verifier.py
